--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,37 @@
     <meta property="og:description" content="Put your description here." />
   </head>
   <body>
-    <header></header>
+    <header>
+      <div id="logo">
+        <div id="web">
+          <img src="img/web.png" alt="the word web in blue capital letters">
+        </div>
+        <div id="loom">
+          <img src="img/loom.png" alt="the word loom in white and yellow capital letters">
+          
+          <input id="menu_toggle" type="checkbox" />
+          
+          <nav>
+            <label for="menu_toggle">
+              <div id="menu_button">
+                <div id="menu_burger">
+                  <span id="bar1" class="burger_bar"></span>
+                  <span id="bar2" class="burger_bar"></span>
+                  <span id="bar3" class="burger_bar"></span>
+                </div>
+                <p>MENU</p>
+              </div>
+            </label>
+            <ul id="menu_items">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="maintenance.html">Portfolio</a></li>
+              <li><a href="#footer_content" id="contact_link">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+
+    </header>
 
     <main></main>
     <footer></footer>
