Home Page First Section
First section on the home page added with lorem ipsum text and static images. Second section describing services in progress.

--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,7 @@
     <link rel="preload" href="css/style.css" as="style" />
 
     <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
@@ -91,17 +84,83 @@
               </div>
             </label>
             <ul id="menu_items">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="maintenance.html">Portfolio</a></li>
-              <li><a href="#footer_content" id="contact_link">Contact</a></li>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="portfolio_home.html">PORTFOLIO</a></li>
+              <li><a href="#footer_content" id="contact_link">CONTACT</a></li>
             </ul>
           </nav>
         </div>
       </div>
-
     </header>
 
-    <main></main>
-    <footer></footer>
+    <main>
+      <div id="heading_section">
+        <div class="section_content">
+          <h1 class="heading_section_heading">PUT YOUR BEST FACE</h1>
+          <h1 class="heading_section_heading">FORWARD</h1>
+          
+          <div id="heading_section_copy">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent purus  lorem, feugiat ut ligula et, 
+              ultricies vehicula leo. Aliquam eleifend  volutpat eros, quis tincidunt lacus vulputate egestas. Nam 
+              sed tempus  ex. Aenean bibendum pulvinar aliquam. Maecenas finibus nibh ut blandit  hendrerit. In 
+              mattis est tellus, a ultricies ante bibendum id.  Vestibulum in eros in risus faucibus egestas. 
+              Praesent suscipit blandit  facilisis. 
+            </p>
+            <a href="#footer_content">CONTACT</a>
+
+          </div>
+          
+          <div id="heading_section_image">
+            <div id="image_carousel">
+              <img src="img/WL_model.png" alt="a black model wearing long pants and a flower bikini top">
+            </div>
+            <div id="image_box">
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div id="services_section">
+        <div class="section_content">
+          <h1 id="services_section_heading">SERVICES</h1>
+          <p>These are just all the services WE can think of providing for you. 
+            Contact us with your requirements and we’ll set up a free consultation to see how else we may be of service.</p>
+          <div id="services_description">
+            <div class="services_list">
+              <div class="image_heading">
+                <img src="img/WL_graphic_design.png" alt="scattered papers with letters drawn on them among stationary">
+                <h2>GRAPHIC DESIGN</h2>
+              </div>
+              <ul>
+
+              </ul>
+            </div>
+            <div class="services_list">
+              <div class="image_heading">
+                <img src="img/WL_web_services_1.png" alt="a computer screen with multiple LAN cables coming out from the side">
+                <h2>WEB SERVICES</h2>
+              </div>
+              <ul>
+
+              </ul>
+            </div>
+
+
+          </div>
+
+
+        </div>
+
+      </div>
+
+    </main>
+
+    <footer>
+
+
+    </footer>
   </body>
 </html>
