--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,16 @@
                 <h2>GRAPHIC DESIGN</h2>
               </div>
               <ul>
-
+                <li>BRANDING DESIGN</li>
+                <li>LOGOS</li>
+                <li>BUSINESS CARDS</li>
+                <li>POSTERS & FLYERS</li>
+                <li>SOCIAL MEDIA POSTS</li>
+                <li>STICKERS</li>
+                <li>CAR VINYLS</li>
+                <li>CONTRACT & DOCUMENT FORMATTING</li>
+                <li>NOTICES & INVITATIONS</li>
+                <li>PRESENTATIONS</li>
               </ul>
             </div>
             <div class="services_list">
@@ -144,22 +153,46 @@
                 <h2>WEB SERVICES</h2>
               </div>
               <ul>
-
+                <li>WEBSITE DESIGN</li>
+                <li>APPLICATION DESIGN</li>
+                <li>WEBSITE BUILDING (HTML & CSS)</li>
+                <li>WEBSITE MAINTENANCE</li>
+                <li>WEBSITE HEALTH ASSESSMENTS</li>
+                <li>SEARCH ENGINE OPTIMIZATION</li>
               </ul>
             </div>
-
-
           </div>
 
+          <div id="services_disclaimer">
+            <div id="disclaimer_copy">
+
+
+            </div>
+            <img src="img/WL_typewriter.png" alt="a greyscale image of two hands typing on a typewriter">
+
+          </div>
 
         </div>
 
       </div>
 
+      <div id="portfolio_section">
+        <div class="section_content">
+          <h1 id="portfolio_section_heading">OUR WORK</h1>
+          <div id="portfolio_icons">
+            <img>
+            <img>
+            <img>
+          </div>
+        </div>
+      </div>
+
     </main>
 
     <footer>
-
+      <div class="section_content" id="footer_content">
+        <h1 id="contact_heading">CONTACT US</h1>
+      </div>
 
     </footer>
   </body>
